Fix medium figure covering up primary actions [WEB-461]

--- a/frontend/scss/organisms/_o-article.scss
+++ b/frontend/scss/organisms/_o-article.scss
@@ -33,6 +33,7 @@
   position: relative;
   margin-top: 28px;
   padding-top: 8px;
+  z-index: 2;
 
   @include breakpoint('xsmall') {
     flex: 0 0 auto;
